--- a/.github/workflows/stage-environment-destroy.yml
+++ b/.github/workflows/stage-environment-destroy.yml
@@ -29,7 +29,7 @@ jobs:
         working-directory: ./stage/data-stores/mysql
         run: terraform init
 
-      - name: Run a multi-line script
+      - name: Database Destroy
         working-directory: ./stage/data-stores/mysql
         run: terraform destroy -auto-approve
         
@@ -39,7 +39,6 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: "ap-northeast-2"
-      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
       
     steps:
       - name: Checkout
@@ -52,7 +51,7 @@ jobs:
         working-directory: ./stage/services/webserver-cluster
         run: terraform init
 
-      - name: Run a multi-line script
+      - name: Webserver Destroy
         working-directory: ./stage/services/webserver-cluster
         run: terraform destroy -auto-approve
   
