--- a/.github/workflows/staging-environment-apply.yml
+++ b/.github/workflows/staging-environment-apply.yml
@@ -51,6 +51,12 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: "ap-northeast-2"
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Terraform Setup
+        uses: hashicorp/setup-terraform@v2
+    
       - name: Webserver Init
         working-directory: stage/services/webserver-cluster
         run: terraform init
